Implement search by categories and refactor data layer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="no_more_results">No more results</string>
     <string name="an_error_occurred_please_try_again">An error occurred. Please try again.</string>
     <string name="no_internet_connection">No internet connection.</string>
+    <string name="api_rate_limit_exceeded">API Rate limit exceeded.\nPlease try again later.</string>
     <string name="unknown_error">Unknown error.</string>
     <string name="failed_to_fetch_data">Failed to fetch data.\nCheck your connection or try again later.</string>
 
