Implement feature to favorite photo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="likes">Likes</string>
     <string name="search">Search</string>
     <string name="close">Close</string>
+    <string name="favorite">Favorite</string>
+    <string name="back">Back</string>
     <string name="search_beautiful_photos">Search beautiful photos</string>
     <string name="no_more_results">No more results</string>
     <string name="an_error_occurred_please_try_again">An error occurred. Please try again.</string>
