--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="favorite">Favorite</string>
     <string name="back">Back</string>
     <string name="favorites">Favorites</string>
+    <string name="about">About</string>
     <string name="search_beautiful_photos">Search beautiful photos</string>
     <string name="no_more_results">No more results</string>
     <string name="an_error_occurred_please_try_again">An error occurred. Please try again.</string>
